syntax = "proto3";

option go_package = './;client';

option java_package = "com.grpc.server";
option java_outer_classname = "CalculatorProto";

package com.grpc.server;

service Calculator {
  rpc Add (AddRequest) returns (AddResponse);
  rpc Subtract (SubtractRequest) returns (SubtractResponse);
}

message AddRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message AddResponse {
  int32 result = 1;
}

message SubtractRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SubtractResponse {
  int32 result = 1;
}
